Migrates commons-lang to native Java Platform functionality (#388)
Co-authored-by: Markus Winter <m.winter@sap.com>